Fix image name issue

--- a/微服务架构编程思想-Think in MicroService/1.什么是微服务架构/1.微服务介绍.md
+++ b/微服务架构编程思想-Think in MicroService/1.什么是微服务架构/1.微服务介绍.md
@@ -2,7 +2,7 @@
 
 我们假设，您开始开发一个打车应用，打算与 Uber 和 Hailo 竞争。经过初步交流和需求收集，您开始手动或者使用类似 Rails、 Spring Boot、 Play 或者 Maven 等平台来生成一个新项目。
 
-该新应用是一个模块化的六边形架构，如图 1-1 所示：
+该新应用是一个模块化的六边形架构，如下图所示：
 
 ![img](assert/1.微服务介绍/FmreGWVGPlnaq3ayM8OYMYxstlBZ@.jpg)
 
@@ -98,7 +98,7 @@
 
 
 
-例如，前面描述的系统可能分解成如图 1-2 所示：
+例如，前面描述的系统可能分解成如下图所示：
 
 ![一个单体应用分解成微服务](assert/1.微服务介绍/FmJWtQjuy3X5QjmsV-zZ2IFwF-Wy@.jpg)
 
