--- a/微服务架构编程思想-Think in MicroService/1.什么是微服务架构/2.使用API网关.md
+++ b/微服务架构编程思想-Think in MicroService/1.什么是微服务架构/2.使用API网关.md
@@ -37,6 +37,7 @@ GET api.company.com/productdetails/productId
 - **配送服务** 配送选项、期限和费用，由配送方的 API 单独提供
 - **推荐服务** 推荐类目
 
-![将移动客户端的需求映射到相关微服务](assert/2.使用API网关/FiwTlviV0sVVIByl3bO-FhkLR65h@.jpg)
+![](assert/2.使用API网关/FiwTlviV0sVVIByl3bO-FhkLR65h@.jpg)
 
 我们需要决定移动客户端如何访问这些服务。让我们来看看有哪些方法。
+
