--- a/微服务架构编程思想-Think in MicroService/1.什么是微服务架构/1.微服务介绍.md
+++ b/微服务架构编程思想-Think in MicroService/1.什么是微服务架构/1.微服务介绍.md
@@ -1,10 +1,24 @@
+如今微服务倍受关注：文章、博客、社交媒体讨论和会议演讲。
+
+微服务正在迅速朝着[加德纳技术成熟度曲线（Gartner Hype cycle）](http://www.gartner.com/technology/research/methodologies/hype-cycle.jsp)的高峰前进。与此同时，也有持怀疑态度的软件社区人员认为微服务没什么新鲜可言。反对者声称它的思想只是面向服务架构（SOA）的重塑。
+
+
+
+然而，无论是炒作还是怀疑，不可否认，[微服务架构模式](http://microservices.io/patterns/microservices.html)具有非常明显的优势 — 特别是在实施敏捷开发和复杂的企业应用交付方面。
+
+在此章节中，您将了解到微服务的由来和与传统[单体应用模式](http://microservices.io/patterns/monolithic.html)的对比。
+
+我们先来看看为什么要考虑使用微服务。
+
+<a id="building-monolithic-applications"></a>
+
 # 构建单体应用
 
 我们假设，您开始开发一个打车应用，打算与 Uber 和 Hailo 竞争。经过初步交流和需求收集，您开始手动或者使用类似 Rails、 Spring Boot、 Play 或者 Maven 等平台来生成一个新项目。
 
-该新应用是一个模块化的六边形架构，如下图所示：
+该新应用有一个模块化的六边形架构，如图 1-1 所示：
 
-![img](assert/1.微服务介绍/FmreGWVGPlnaq3ayM8OYMYxstlBZ@.jpg)
+![图 1-1、一个简单的打车应用](C:/Users/Tonited/Desktop/%E6%97%A5%E5%B8%B8%E7%90%90%E7%A2%8E%E7%AC%94%E8%AE%B0/%E8%BE%BE%E6%91%A9%E9%99%A2/%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84%E7%BC%96%E7%A8%8B%E6%80%9D%E6%83%B3-Think%20in%20MicroService/1.%E4%BB%80%E4%B9%88%E6%98%AF%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84/resources/1-1.png)
 
 该应用的核心是由模块实现的业务逻辑，它定义了服务、领域对象和事件。
 
@@ -26,11 +40,13 @@
 
 单体应用同样易于部署。 您只需拷贝打包好的应用程序到服务器上。您还可以通过运行多个副本和结合负载均衡器来扩展应用。在项目的早期阶段，它可以良好运作。
 
+<a id="marching-toward-monolithic-hell"></a>
+
 # 走向单体地狱
 
 不幸的是，这种简单的方法有很大的局限性。成功的应用有一个趋势，随着时间推移而变得越来越臃肿。
 
-您的开发团队在每个冲刺阶段都要实现更多的用户需求，这意味着需要添加了许多行代码。几年之后，小而简单的应用将会逐渐成长成一个 **庞大的单体**。
+您的开发团队在每个冲刺阶段都要实现更多的用户需求，这意味着需要添加了许多行代码。几年之后，小而简单的应用将会逐渐成长成一个**[庞大的单体](http://microservices.io/patterns/monolithic.html)**。
 
 为了给出一个极端示例，我最近和一位开发者做了交谈，他正在编写一个工具，该工具用于从他们的数百万行代码（ lines of code， LOC）应用中分析出数千个 JAR之间的依赖。我相信这是大量开发者在多年齐心协力下创造出了这样的野兽。
 
@@ -40,13 +56,13 @@
 
 一个主要问题是应用程序实在非常复杂。对于任何一个开发人员来说显得过于庞大，这是可以理解的。最终，正确修复 bug 和实现新功能变得非常困难而耗时。
 
-此外， 这种趋势就像是往下的螺旋。如果基本代码都令人难以理解，那么改变也不会变得正确，您最终得到的将是一个巨大且不可思议的 **大泥球**。
+此外， 这种趋势就像是往下的螺旋。如果基本代码都令人难以理解，那么改变也不会变得正确，您最终得到的将是一个巨大且不可思议的[大泥球](http://www.laputan.org/mud/)。
 
 
 
 应用程序的规模也将减缓发展。应用程序越大，启动时间越长。
 
-我调查过开发者们的单体应用的大小和性能，一些报告的启动时间为 12 分钟。我也听说过应用程序启动需要 40 分钟以上的怪事。
+我[调查](https://plainoldobjects.com/2015/05/13/monstrous-monoliths-how-bad-can-it-get/)过开发者们的单体应用的大小和性能，一些报告的启动时间为 12 分钟。我也听说过应用程序启动需要 40 分钟以上的怪事。
 
 如果开发人员经常要重启应用服务器，那么很大一部分时间都是在等待中度过，他们的生产力将受到限制。
 
@@ -62,9 +78,9 @@
 
 当不同模块存在资源需求冲突时，单体应用可能难以扩展。
 
-例如，一个模块可能会执行 CPU 密集型图像处理逻辑，理想情况下是部署在 Amazon EC2 Compute Optimized实例中。
+例如，一个模块可能会执行 CPU 密集型图像处理逻辑，理想情况下是部署在 [Amazon EC2 Compute Optimized 实例](http://aws.amazon.com/about-aws/whats-new/2013/11/14/announcing-new-amazon-ec2-compute-optimized-instances/)。
 
-另一个模块可能是一个内存数据库，最适合部署到 EC2 Memory-optimized 实例。然而， 由于这些模块被部署在一起，您必须在硬件选择上做出妥协。
+另一个模块可能是一个内存数据库，最适合部署到 [EC2 Memory-optimized 实例](https://aws.amazon.com/cn/about-aws/whats-new/2014/04/10/r3-announcing-the-next-generation-of-amazon-ec2-memory-optimized-instances/)实例。然而， 由于这些模块被部署在一起，您必须在硬件选择上做出妥协。
 
 
 
@@ -88,9 +104,11 @@
 
 它使用了过时、非生产性技术编写，这使得招聘优秀开发人员变得非常困难。应用程序变得难以扩展，不可靠。因此敏捷开发和应用交付是不可能的。那么您能做些什么呢？
 
-# 微服务—解决复杂问题
+<a id="tackling-the-complexity"></a>
 
-许多如 Amazon、eBay 和 Netflix 这样的组织，已经采用现在所谓的微服务架构模式解决了这个问题，而不是构建一个臃肿的单体应用。
+# 微服务 — 解决复杂问题
+
+许多如 Amazon、eBay 和 [Netflix](http://www.nginx.com/blog/microservices-at-netflix-architectural-best-practices/ ) 这样的组织，已经采用现在所谓的[微服务架构模式](http://microservices.io/patterns/microservices.html)解决了这个问题，而不是构建一个臃肿的单体应用。
 
 它的思路是将应用程序分解成一套较小的互连服务。一个服务通常实现了一组不同的特性或功能，例如订单管理、客户管理等。每一个微服务都是一个迷你应用，它自己的六边形架构包括了业务逻辑以及多个适配器。
 
@@ -98,9 +116,9 @@
 
 
 
-例如，前面描述的系统可能分解成如下图所示：
+例如，前面描述的系统可能分解成如图 1-2 所示：
 
-![一个单体应用分解成微服务](assert/1.微服务介绍/FmJWtQjuy3X5QjmsV-zZ2IFwF-Wy@.jpg)
+![图 1-2、一个单体应用分解成微服务](C:/Users/Tonited/Desktop/%E6%97%A5%E5%B8%B8%E7%90%90%E7%A2%8E%E7%AC%94%E8%AE%B0/%E8%BE%BE%E6%91%A9%E9%99%A2/%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84%E7%BC%96%E7%A8%8B%E6%80%9D%E6%83%B3-Think%20in%20MicroService/1.%E4%BB%80%E4%B9%88%E6%98%AF%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84/resources/1-2.png)
 
 应用程序的每个功能区域现在都由自己的微服务实现。
 
@@ -114,13 +132,11 @@
 
 
 
-一些 REST API 也暴露给移动端应用以供司机和乘客使用。然而，应用不能直接访问后端服务。相反，他们之间的通信是由一个称为 API 网关（ API Gateway）的中介负责。 API 网关负责负载均衡、缓存、访问控制、 API 计量和监控。
+一些 REST API 也暴露给移动端应用以供司机和乘客使用。然而，应用不能直接访问后端服务。相反，他们之间的通信是由一个称为 [API 网关](http://microservices.io/patterns/apigateway.html)（ API Gateway）的中介负责。 API 网关负责负载均衡、缓存、访问控制、 API 计量和监控，[这些都可以通过使用 NGINX 来实现](http://www.nginx.com/solutions/api-gateway/)。
 
+![图 1-3、开发和交付中的伸缩立方（Scale Cube）](C:/Users/Tonited/Desktop/%E6%97%A5%E5%B8%B8%E7%90%90%E7%A2%8E%E7%AC%94%E8%AE%B0/%E8%BE%BE%E6%91%A9%E9%99%A2/%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84%E7%BC%96%E7%A8%8B%E6%80%9D%E6%83%B3-Think%20in%20MicroService/1.%E4%BB%80%E4%B9%88%E6%98%AF%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84/resources/1-3.png)
 
-
-![开发和交付中的伸缩立方（Scale Cube）](assert/1.微服务介绍/FqDdCgFN_YyHNYxrInG6MpUK56Ha@.jpg)
-
-微服务架构模式相当于此伸缩立方的 Y 轴坐标，此立方是一个来自 **《架构即未来》** 的三维伸缩模型。
+微服务架构模式相当于此伸缩立方的 Y 轴坐标，此立方是一个来自[《架构即未来》](http://theartofscalability.com/)的三维伸缩模型。
 
 另外两个坐标轴是由运行多个相同应用程序副本的负载均衡器组成的X 轴坐标和 Z 轴坐标（或数据分区），其中请求的属性（例如，一行记录的主键或者客户标识）用于将请求路由到特定的服务器。
 
@@ -130,11 +146,11 @@
 
 在运行时， X 坐标轴上运行着服务的多个实例，每个服务配合负载均衡器以满足吞吐量和可用性。某些应用程序也有可能使用 Z 坐标轴来进行分区服务。下图展示了如何用 Docker 将 Trip Management 服务部署到 Amazon EC2 上运行。
 
-![使用 Docker 部署 Trip Management 服务](assert/1.微服务介绍/Fj8xaaFk65tiYTM__LIcw6mlLrtT@.jpg)
+![图 1-4、使用 Docker 部署 Trip Management 服务](C:/Users/Tonited/Desktop/%E6%97%A5%E5%B8%B8%E7%90%90%E7%A2%8E%E7%AC%94%E8%AE%B0/%E8%BE%BE%E6%91%A9%E9%99%A2/%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84%E7%BC%96%E7%A8%8B%E6%80%9D%E6%83%B3-Think%20in%20MicroService/1.%E4%BB%80%E4%B9%88%E6%98%AF%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84/resources/1-4.png)
 
 在运行时， Trip Management 服务由多个服务实例组成，每个服务实例是一个 Docker容器。
 
-为了实现高可用，容器是在多个云虚拟机上运行的。服务实例的之前是一个 **类似 NGINX 的负载均衡器**，用于跨实例分发请求。负载均衡器也可以处理其他问题，如 **缓存**、**访问控制**、**API 度量** 和 **监控**。
+为了实现高可用，容器是在多个云虚拟机上运行的。服务实例的之前是一个[类似 NGINX 的负载均衡器](http://www.nginx.com/solutions/load-balancing/)，用于跨实例分发请求。负载均衡器也可以处理其他问题，如[缓存](http://www.nginx.com/resources/admin-guide/content-caching/)、[访问控制](http://www.nginx.com/resources/admin-guide/restricting-access/)、[API 度量](http://www.nginx.com/solutions/api-gateway/)和[监控](http://www.nginx.com/products/live-activity-monitoring/)。
 
 
 
@@ -144,7 +160,9 @@
 
 然而，如果您想从微服务中受益，每一个服务都应该有自己的数据库模式。因为它能实现松耦合。下图展示了数据库架构示例应用程序。
 
-![打车应用的数据库架构](assert/1.微服务介绍/Fq_TKSQ88dK5Mp-QihWUj64j0lma@.jpg)
+
+
+![图 1-5、打车应用的数据库架构](C:/Users/Tonited/Desktop/%E6%97%A5%E5%B8%B8%E7%90%90%E7%A2%8E%E7%AC%94%E8%AE%B0/%E8%BE%BE%E6%91%A9%E9%99%A2/%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84%E7%BC%96%E7%A8%8B%E6%80%9D%E6%83%B3-Think%20in%20MicroService/1.%E4%BB%80%E4%B9%88%E6%98%AF%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84/resources/1-5.png)
 
 每个服务都拥有各自的数据库。而且，服务可以使用一种最适合其需求、号称多语言持久架构（polyglot persistence 
 architecture）的数据库。例如，Driver Management，要找到与潜在乘客接近的司机，就必须使用支持高效地理查询的数据库。
@@ -161,9 +179,11 @@ architecture）的数据库。例如，Driver Management，要找到与潜在乘
 >
 > **Aug 27 2019**
 
-微服务是由一组服务组成。然而，换另一种方式去思考微服务架构模式，它是没有商业化的 SOA，没有集成 Web 服务规范（ WS-*）和企业服务总线（ Enterprise Service Bus， ESB）。*
+微服务是由一组服务组成。然而，换另一种方式去思考微服务架构模式，它是没有商业化的 SOA，没有集成 集成 [Web 服务规范](http://en.wikipedia.org/wiki/List_of_web_service_specifications)（WS-\*）和企业服务总线（ Enterprise Service Bus， ESB）。*
 
-*基于微服务的应用支持更简单、轻量级的协议，例如， REST，而不是 WS-*。他们也尽量避免使用 ESB，而是实现微服务本身具有类似 ESB 的功能。微服务架构也拒绝了 SOA 的其他部分，例如，数据访问规范模式概念。
+基于微服务的应用支持更简单、轻量级的协议，例如，REST，而不是 WS-\*。他们也尽量避免使用 ESB，而是实现微服务本身具有类似 ESB 的功能。微服务架构也拒绝了 SOA 的其他部分，例如，数据访问[规范模式](https://en.wikipedia.org/wiki/Canonical_schema_pattern)概念。
+
+<a id="the-benefits-of-microservices"></a>
 
 # 微服务的优点
 
@@ -199,9 +219,11 @@ architecture）的数据库。例如，Driver Management，要找到与潜在乘
 
 此外，您可以使用与服务资源要求最匹配的硬件。例如，您可以在 EC2 Compute Optimized 实例上部署一个 CPU 密集型图像处理服务，并且在 EC2 Memory-optimized 实例上部署一个内存数据库服务。
 
+<a id="the-drawbacks-of-microservices"></a>
+
 # 微服务的缺点
 
-就像 Fred Brooks 大约在 30 年前写的 **《人月神话》** 中说的，**没有银弹**。
+就像 Fred Brooks 大约在 30 年前写的[《人月神话》](https://en.wikipedia.org/wiki/The_Mythical_Man-Month)中说的，**没有银弹**。
 
 与其他技术一样，微服务架构模式也存在着缺点。
 
@@ -231,7 +253,7 @@ architecture）的数据库。例如，Driver Management，要找到与潜在乘
 
 更新多个业务实体的业务事务是相当普遍的。这些事务在单体应用中的实现显得微不足道，因为单体只存在一个单独的数据库。
 
-在基于微服务的应用程序中，您需要更新不同服务所用的数据库。通常不会选择分布式事务，不仅仅是因为 **CAP 定理**。他们根本不支持如今高度可扩展的 NoSQL 数据库和消息代理。您最后不得不使用基于**最终一致性**的方法，这对于开发人员来说更具挑战性。
+在基于微服务的应用程序中，您需要更新不同服务所用的数据库。通常不会选择分布式事务，不仅仅是因为 [CAP 定理](https://en.wikipedia.org/wiki/CAP_theorem)。**他们根本不支持如今高度可扩展的 NoSQL 数据库和消息代理。您最后不得不使用基于**最终一致性**的方法，这对于开发人员来说更具挑战性。
 
 
 
@@ -259,17 +281,23 @@ architecture）的数据库。例如，Driver Management，要找到与潜在乘
 
 一个单体应用可以很容易地部署到基于传统负载均衡器的一组相同服务器上。每个应用程序实例都配置有基础设施服务的位置（主机和端口），比如数据库和消息代理。
 
-相比之下，微服务应用程序通常由大量的服务组成。例如，据 Adrian Cockcroft 了解到， Hailo 拥有 160 个不同的服务，Netflix 拥有的服务超过 600 个。每个服务都有多个运行时实例。还有更多的移动部件需要配置、部署、扩展和监控。
+相比之下，微服务应用程序通常由大量的服务组成。例如，据 [Adrian Cockcroft](https://twitter.com/adrianco) 了解到， Hailo 拥有 160 个不同的服务，Netflix 拥有的服务超过 600 个。每个服务都有多个运行时实例。还有更多的移动部件需要配置、部署、扩展和监控。
 
 此外，您还需要实现 **服务发现机制**，使得服务能够发现需要与之通信的任何其他服务的位置（主机和端口）。比较传统麻烦的基于票据（ ticket-based）和手动的操作方式无法扩展到如此复杂程度。因此， 要成功部署微服务应用程序， 需要求开发人员能高度控制部署方式和高度自动化。
 
 
 
-一种自动化方式是使用现成的平台即服务（PaaS），如 Cloud Foundry。 
+一种自动化方式是使用现成的平台即服务（PaaS），如 [Cloud Foundry](https://www.cloudfoundry.org/)。 
 
  PaaS 为开发人员提供了一种简单的方式来部署和管理他们的微服务。它让开发人员避开了诸如采购和配置 IT 资源等烦恼。
 
-同时，配置 PaaS 的系统人员与网络专业人员可以确保达到最佳实践以落实公司策略。自动化微服务部署的另一个方式是开发自己的 PaaS。一个普遍的起点是使用集群方案，如 **Kubernetes**，与 **Docker** 等容器技术相结合。
+同时，配置 PaaS 的系统人员与网络专业人员可以确保达到最佳实践以落实公司策略。自动化微服务部署的另一个方式是开发自己的 PaaS。一个普遍的起点是使用集群方案，如 [Kubernetes](https://kubernetes.io/)，与 **Docker** 等容器技术相结合。
+
+
+
+最后我们将看到如 NGINX 的[基于软件的应用交付](http://www.nginx.com/products/)方式是如何在微服务级别处理缓存、访问控制、API 计量和监控，这些可以帮助解决此问题。
+
+<a id="summary"></a>
 
 # 总结
 
@@ -278,3 +306,29 @@ architecture）的数据库。例如，Driver Management，要找到与潜在乘
 单体架构模式只适用于简单、轻量级的应用程序，如果您使用它来构建复杂应用，您最终会陷入痛苦的境地。
 
 微服务架构模式是复杂、持续发展应用的一个更好的选择。尽管它存在着缺点和实现挑战。
+
+在后面的章节中，我将介绍微服务架构的方方面面并探讨诸如服务发现、服务部署方案以及将单体应用重构为服务的策略。
+
+<a id="microservices-in-action"></a>
+
+# 微服务实战：NGINX Plus 作为反向代理服务器
+
+By Floyd Smith
+
+[10000 个网站中有超过 50%](http://w3techs.com/technologies/cross/web_server/ranking) 使用 NGINX，这主要是因为它具有作为反向代理服务器的能力。
+
+
+
+您可以把 NGINX 放在当前应用程序甚至是数据库服务器之前以获取各种功能 — 更高的性能、更高的安全性、可扩展性、灵活性等。
+
+你现有的应用程序只需要配置代码和作出很少或无需改变。然而，对于存在性能压力的站点，或者预计未来存在高负荷，使用 NGINX 的效果看起来可能没那么神奇。
+
+那么这与微服务有什么关系呢？
+
+实现一个反向代理服务器，并使用 NGINX 的其他功能来为您提供架构灵活性，反向代理服务器、静态和应用文件缓存、SSL/TLS 和 HTTP/2 都将从您的应用程序剔除。让应用程序只做它该做的事，NGINX 还可作为负载均衡器，这是微服务实施过程中的一个关键角色。
+
+先进的 NGINX Plus 的功能包含了复杂的负载均衡算法、多种方式的会话持久和管理监控，这些对微服务尤其有用（NGINX 最近还增加了使用 DNS SRV 记录的服务发现支持，这是一个顶尖的功能）。
+
+而且，如本章所述，NGINX 可以自动化部署微服务。
+
+此外，NGINX 还提供了必要的功能来支撑 [NGINX 微服务参考架构](https://www.nginx.com/blog/introducing-the-nginx-microservices-reference-architecture/)中的三大模型。代理模型使用 NGINX 作为 API 网关；网格路由模型使用一个额外的 NGINX 作为进程间通信中枢；Fabric 模型中的每个微服务使用一个 NGINX 来控制 HTTP 流量，在微服务之间实现 SSL/TLS，这非常具有突破性。
