修正1.微服务介绍的图片路径

--- a/微服务架构编程思想-Think in MicroService/1.什么是微服务架构/4.服务发现.md
+++ b/微服务架构编程思想-Think in MicroService/1.什么是微服务架构/4.服务发现.md
@@ -1,3 +1,16 @@
+---
+titile: 服务发现
+author: Chris Richardson & Floyd Smith
+date: 2020.05.02
+keywords: 服务发现
+img: https://gitee.com/tonited/qfdmy/raw/master/%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84%E7%BC%96%E7%A8%8B%E6%80%9D%E6%83%B3-Think%20in%20MicroService/1.%E4%BB%80%E4%B9%88%E6%98%AF%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84/assert/4.%E6%9C%8D%E5%8A%A1%E5%8F%91%E7%8E%B0/Fo_dHNWJM3x2ZPtUaqL86mCrMF4S@.webp
+categories: 分布式架构及微服务
+tags: 
+- 达摩院
+- 微服务架构编程思想-Think in MicroService
+- 什么是微服务架构
+---
+
 在本章中，我们将探讨服务发现（service discovery）相关的内容。
 
 <a id="why-use-service-discovery"></a>
