--- a/微服务架构编程思想-Think in MicroService/1.什么是微服务架构/1.微服务介绍.md
+++ b/微服务架构编程思想-Think in MicroService/1.什么是微服务架构/1.微服务介绍.md
@@ -1,3 +1,16 @@
+---
+titile: 微服务介绍
+author: Chris Richardson & Floyd Smith
+date: 2020.05.01
+keywords: 微服务介绍
+img: https://gitee.com//tonited/qfdmy/raw/master/%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84%E7%BC%96%E7%A8%8B%E6%80%9D%E6%83%B3-Think%20in%20MicroService/1.%E4%BB%80%E4%B9%88%E6%98%AF%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84/assert/1.微服务介绍/Fj8xaaFk65tiYTM__LIcw6mlLrtT@.jpg
+categories: 分布式架构及微服务
+tag: 
+- 达摩院
+- 微服务架构编程思想-Think in MicroService
+- 什么是微服务架构
+---
+
 如今微服务倍受关注：文章、博客、社交媒体讨论和会议演讲。
 
 微服务正在迅速朝着[加德纳技术成熟度曲线（Gartner Hype cycle）](http://www.gartner.com/technology/research/methodologies/hype-cycle.jsp)的高峰前进。与此同时，也有持怀疑态度的软件社区人员认为微服务没什么新鲜可言。反对者声称它的思想只是面向服务架构（SOA）的重塑。
@@ -18,7 +31,7 @@
 
 该新应用有一个模块化的六边形架构，如图 1-1 所示：
 
-![图 1-1、一个简单的打车应用](C:/Users/Tonited/Desktop/%E6%97%A5%E5%B8%B8%E7%90%90%E7%A2%8E%E7%AC%94%E8%AE%B0/%E8%BE%BE%E6%91%A9%E9%99%A2/%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84%E7%BC%96%E7%A8%8B%E6%80%9D%E6%83%B3-Think%20in%20MicroService/1.%E4%BB%80%E4%B9%88%E6%98%AF%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84/resources/1-1.png)
+![图 1-1、一个简单的打车应用](resources/1-1.png)
 
 该应用的核心是由模块实现的业务逻辑，它定义了服务、领域对象和事件。
 
@@ -118,7 +131,7 @@
 
 例如，前面描述的系统可能分解成如图 1-2 所示：
 
-![图 1-2、一个单体应用分解成微服务](C:/Users/Tonited/Desktop/%E6%97%A5%E5%B8%B8%E7%90%90%E7%A2%8E%E7%AC%94%E8%AE%B0/%E8%BE%BE%E6%91%A9%E9%99%A2/%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84%E7%BC%96%E7%A8%8B%E6%80%9D%E6%83%B3-Think%20in%20MicroService/1.%E4%BB%80%E4%B9%88%E6%98%AF%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84/resources/1-2.png)
+![图 1-2、一个单体应用分解成微服务](resources/1-2.png)
 
 应用程序的每个功能区域现在都由自己的微服务实现。
 
@@ -134,7 +147,7 @@
 
 一些 REST API 也暴露给移动端应用以供司机和乘客使用。然而，应用不能直接访问后端服务。相反，他们之间的通信是由一个称为 [API 网关](http://microservices.io/patterns/apigateway.html)（ API Gateway）的中介负责。 API 网关负责负载均衡、缓存、访问控制、 API 计量和监控，[这些都可以通过使用 NGINX 来实现](http://www.nginx.com/solutions/api-gateway/)。
 
-![图 1-3、开发和交付中的伸缩立方（Scale Cube）](C:/Users/Tonited/Desktop/%E6%97%A5%E5%B8%B8%E7%90%90%E7%A2%8E%E7%AC%94%E8%AE%B0/%E8%BE%BE%E6%91%A9%E9%99%A2/%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84%E7%BC%96%E7%A8%8B%E6%80%9D%E6%83%B3-Think%20in%20MicroService/1.%E4%BB%80%E4%B9%88%E6%98%AF%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84/resources/1-3.png)
+![图 1-3、开发和交付中的伸缩立方（Scale Cube）](resources/1-3.png)
 
 微服务架构模式相当于此伸缩立方的 Y 轴坐标，此立方是一个来自[《架构即未来》](http://theartofscalability.com/)的三维伸缩模型。
 
@@ -146,7 +159,7 @@
 
 在运行时， X 坐标轴上运行着服务的多个实例，每个服务配合负载均衡器以满足吞吐量和可用性。某些应用程序也有可能使用 Z 坐标轴来进行分区服务。下图展示了如何用 Docker 将 Trip Management 服务部署到 Amazon EC2 上运行。
 
-![图 1-4、使用 Docker 部署 Trip Management 服务](C:/Users/Tonited/Desktop/%E6%97%A5%E5%B8%B8%E7%90%90%E7%A2%8E%E7%AC%94%E8%AE%B0/%E8%BE%BE%E6%91%A9%E9%99%A2/%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84%E7%BC%96%E7%A8%8B%E6%80%9D%E6%83%B3-Think%20in%20MicroService/1.%E4%BB%80%E4%B9%88%E6%98%AF%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84/resources/1-4.png)
+![图 1-4、使用 Docker 部署 Trip Management 服务](resources/1-4.png)
 
 在运行时， Trip Management 服务由多个服务实例组成，每个服务实例是一个 Docker容器。
 
@@ -162,7 +175,7 @@
 
 
 
-![图 1-5、打车应用的数据库架构](C:/Users/Tonited/Desktop/%E6%97%A5%E5%B8%B8%E7%90%90%E7%A2%8E%E7%AC%94%E8%AE%B0/%E8%BE%BE%E6%91%A9%E9%99%A2/%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84%E7%BC%96%E7%A8%8B%E6%80%9D%E6%83%B3-Think%20in%20MicroService/1.%E4%BB%80%E4%B9%88%E6%98%AF%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84/resources/1-5.png)
+![图 1-5、打车应用的数据库架构](resources/1-5.png)
 
 每个服务都拥有各自的数据库。而且，服务可以使用一种最适合其需求、号称多语言持久架构（polyglot persistence 
 architecture）的数据库。例如，Driver Management，要找到与潜在乘客接近的司机，就必须使用支持高效地理查询的数据库。
