--- a/微服务架构编程思想-Think in MicroService/1.什么是微服务架构/2.使用API网关.md
+++ b/微服务架构编程思想-Think in MicroService/1.什么是微服务架构/2.使用API网关.md
@@ -1,4 +1,15 @@
-
+---
+titile: 使用API网关
+author: Chris Richardson & Floyd Smith
+date: 2020.05.01
+keywords: 使用API网关
+img: https://gitee.com/tonited/qfdmy/raw/master/%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84%E7%BC%96%E7%A8%8B%E6%80%9D%E6%83%B3-Think%20in%20MicroService/1.%E4%BB%80%E4%B9%88%E6%98%AF%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84/assert/2.%E4%BD%BF%E7%94%A8API%E7%BD%91%E5%85%B3/FptLo01QdiYaOJ9GZIx7v5cq6XrH@.jpg
+categories: 分布式架构及微服务
+tags:
+- 达摩院
+- 微服务架构编程思想-Think in MicroService
+- 什么是微服务架构
+---
 
 七个章节是关于如何设计、构建和部署微服务。第一章介绍了微服务架构模式。它阐述了使用微服务的优点与缺点，以及尽管如此，微服务通常是复杂应用的理想选择。
 
