--- a/微服务架构编程思想-Think in MicroService/1.什么是微服务架构/3.进程间通信.md
+++ b/微服务架构编程思想-Think in MicroService/1.什么是微服务架构/3.进程间通信.md
@@ -1,3 +1,16 @@
+---
+titile: 进程间通信
+author: Chris Richardson & Floyd Smith
+date: 2020.05.02
+keywords: 进程间通信
+img: https://gitee.com/tonited/qfdmy/raw/master/%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84%E7%BC%96%E7%A8%8B%E6%80%9D%E6%83%B3-Think%20in%20MicroService/1.%E4%BB%80%E4%B9%88%E6%98%AF%E5%BE%AE%E6%9C%8D%E5%8A%A1%E6%9E%B6%E6%9E%84/assert/3.%E8%BF%9B%E7%A8%8B%E9%97%B4%E9%80%9A%E4%BF%A1/Fk_7VvCaoswP39qA4IvfXw68LFUO@.webp
+categories: 分布式架构及微服务
+tags: 
+- 达摩院
+- 微服务架构编程思想-Think in MicroService
+- 什么是微服务架构
+---
+
 在本章中，我们来了解一下系统中的服务是如何相互通信的。
 
 <a id="introduction"></a>
